<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/audiodescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:text="@string/audio_description" />

        <LinearLayout
            android:id="@+id/LinearLayoutServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="CONFIG CONNECTION"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutServerInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/TextViewServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/input_host" />

            <EditText
                android:id="@+id/EditTextServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:hint="@string/input_host"
                android:inputType="text"
                android:saveEnabled="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/TextViewPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/input_port" />

            <EditText
                android:id="@+id/EditTextPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:hint="@string/input_port"
                android:inputType="number"
                android:saveEnabled="true"
                android:typeface="normal" />
        </LinearLayout>

        <Button
            android:id="@+id/ButtonPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:text="@string/btn_waiting" />

        <CheckBox
            android:id="@+id/auto_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/auto_start" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/input_buffer_headroom" />

            <Spinner
                android:id="@+id/bufferHeadroomSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/input_target_latency" />

            <Spinner
                android:id="@+id/targetLatencySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="LOGS"
            android:textStyle="bold"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:background="@drawable/background"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center"
            android:elevation="2dp"
            android:layout_marginBottom="20dp">

            <!-- NestedScrollView to make errorText scrollable within a fixed height -->
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/errorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:textColor="#d50000"
                    android:textSize="15sp"
                    android:scrollbars="vertical" />
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <TextView
            android:id="@+id/title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="ABOUT MODULE"
            android:textStyle="bold"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/background"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center"
            android:elevation="2dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/builderinfoLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/builderinfo"
                android:textAppearance="@style/TextAppearance.VersionInfo" />

            <TextView
                android:id="@+id/buildVersionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/build_version"
                android:textAppearance="@style/TextAppearance.VersionInfo" />

            <TextView
                android:id="@+id/moduleInfoLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:ellipsize="end"
                android:text="@string/moduleInfo"
                android:textAppearance="@style/TextAppearance.VersionInfo" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
