<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <!--
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/wlan_interface"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/refresh_interval"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1" />
        </LinearLayout>

        <Spinner
            android:id="@+id/wifi_channel"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/signal_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signal2"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:id="@+id/channel_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/channel2"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:id="@+id/bssid_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bssid3"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:id="@+id/encryption_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/encryption2"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ListView
                android:id="@+id/wifi_networks_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="1dp"
                android:background="@android:color/black"
                android:textColor="@android:color/holo_green_light"
                android:fontFamily="monospace"
                android:textSize="11sp"
                tools:ignore="LabelFor" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
            app:itemIconTint="@color/nav_item_color"
            app:itemTextColor="@color/nav_item_color"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/wifi_bottom_navigation_menu" />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>